fixed homepage spacing

--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -79,7 +79,7 @@
   .intro-section {
     display: flex;
     flex-flow: row;
-    padding: 8% 10% 8% 10%;
+    padding: 8% 10% 0% 10%;
     justify-content: flex-start;
     align-items: center;
   }
